--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,10 +8,11 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "${fileDirname}\\**.c",
-                //"${fileDirname}\\**.h",
                 "${fileDirname}\\source\\**.c",
-                //"${fileDirname}\\jansson\\**.c",
-                //"${fileDirname}\\include\\**.h",
+                //"-I", "lib",
+                //"-L","-l:lib\\libjansson-4.dll","-Wall",
+                "-I", "\"C:\\msys64\\usr\\include\"",
+                "-L", "-l:\"C:\\msys64\\usr\\bin\\msys-jansson-4.dll\"",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
