--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
 		"xtree": "cpp",
 		"source_location": "cpp",
 		"feynman_particle.h": "c",
-		"feynman_block.h": "c"
+		"feynman_block.h": "c",
+		"jansson_config.h": "c"
 	}
 }
