--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
 			"externalConsole": false,
 			"MIMode": "gdb",
 			//"miDebuggerPath": "/path/to/gdb",
+			"preLaunchTask": "build",
 			"setupCommands": [
 				{
 					"description": "Enable pretty-printing for gdb",
