--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/main.exe",
-			"args": ["random", "{\\\"particles\\\":[[\\\"e\\\",4],[\\\"q\\\",4],[\\\"p\\\",4]],\\\"blocks\":[[\\\"ee->pp\\\",2,[\\\"e\",\\\"e\\\"],[\\\"p\\\",\\\"p\\\"]],[\\\"qq->\\\",2,[\\\"q\\\",\\\"q\\\"],[]],[\\\"p->qe\\\",2,[\\\"p\\\"],[\\\"q\\\",\\\"e\\\"]],[\\\"eq->p\\\",2,[\\\"e\",\\\"q\\\"],[\"p\"]]]}"],
+			"args": ["random", "example.json"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
